kube-system/external-dns.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: exeternal-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: dev
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: yamazawa/external-dns:coredns
        args:
        - --source=ingress
        - --namespace=kube-system
        - --domain-filter=kubernetes.cf
        - --provider=coredns
        - --registry=txt
        - --txt-owner-id=kube-system
        - --log-level=debug
