kube-system/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-system
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/target: 51.15.39.110
    external-dns.alpha.kubernetes.io/target: 51.15.85.186
spec:
  tls:
  - hosts:
    - kubernetes.cf
    secretName: domain-tls
  rules:
  - host: kubernetes.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: webroot
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # adds 301 redirect with trailing slash
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/dashboard)$ $1/dashboard/ permanent;
spec:
  rules:
  - host: kubernetes.cf
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
